# int128

./: .drone.jsonnet  CMakeLists.txt  README.md
.github/workflows/: ci.yml  codecov.yml  fuzz.yml
doc/: antora.yml  int128-playbook.yml
doc/modules/ROOT/: nav.adoc
doc/modules/ROOT/pages/: api_reference.adoc  bit.adoc  config.adoc  cstdlib.adoc  examples.adoc  int128_t.adoc  literals.adoc  mixed_type_ops.adoc  numeric.adoc  overview.adoc  printer.adoc  uint128_t.adoc
examples/: math_and_random.cpp
extra/: int128.natvis
include/boost/int128/: bit.hpp  charconv.hpp  cstdlib.hpp  fmt_format.hpp  format.hpp  literals.hpp  numeric.hpp  random.hpp  string.hpp
include/boost/int128/detail/: clz.hpp  common_div.hpp  common_mul.hpp  config.hpp  conversions.hpp  ctz.hpp  int128_imp.hpp  mini_from_chars.hpp  mini_to_chars.hpp  uint128_imp.hpp  utilities.hpp
module/: Jamfile
ports/int128/: portfile.cmake  vcpkg.json
test/: CMakeLists.txt  Jamfile  cuda_jamfile  cuda_managed_ptr.hpp  test_add.cu  test_bit.cpp  test_bit_ceil.cu  test_bit_floor.cu  test_bit_width.cu  test_byteswap.cu  test_countl_one.cu  test_countl_zero.cu  test_countr_one.cu  test_countr_zero.cu  test_div.cpp  test_gcd_lcm.cpp  test_has_single_bit.cu  test_i128.cpp  test_i128_no_sign_conv.cpp  test_limits_i128.cpp  test_limits_u128.cpp  test_literals.cpp  test_midpoint.cpp  test_mixed_type_sign_compare.cpp  test_mixed_type_sign_conversion.cpp  test_popcount.cu  test_rotl.cu  test_rotr.cu  test_signed_add.cu  test_signed_add_sat.cu  test_signed_and.cu  test_signed_cstdlib_div.cu  test_signed_div.cu  test_signed_div_sat.cu  test_signed_eq.cu  test_signed_from_chars.cu  test_signed_from_chars_bases.cu  test_signed_gcd.cu  test_signed_ge.cu  test_signed_gt.cu  (+51 more)
test/compile_tests/: random_compile.cpp
test/fuzzing/: test_fuzzing_add_versus_wide_int.cpp  test_fuzzing_mul_versus_wide_int.cpp  test_fuzzing_sub_versus_wide_int.cpp
